--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-    "name": "youtube-transcript-summarizer",
-    "version": "1.0.0",
-    "description": "A web app to transcribe YouTube videos and generate summaries",
-    "main": "server/index.js",
-    "scripts": {
-          "start": "node server/index.js",
-          "dev": "concurrently \"npm run server\" \"npm run client\"",
-          "server": "nodemon server/index.js",
-          "client": "cd client && npm start",
-          "build": "cd client && npm run build",
-          "heroku-postbuild": "npm run build"
-    },
-    "keywords": ["youtube", "transcription", "summarization", "ai"],
-    "author": "",
-    "license": "MIT",
-    "dependencies": {
-          "express": "^4.18.2",
-          "cors": "^2.8.5",
-          "dotenv": "^16.0.3",
-          "@anthropic-ai/sdk": "^0.9.1",
-          "google-auth-library": "^9.0.0"
-    },
-    "devDependencies": {
-          "nodemon": "^3.0.1",
-          "concurrently": "^8.0.1"
-    }
+      "name": "youtube-transcript-summarizer",
+      "version": "1.0.0",
+      "description": "A web app to transcribe YouTube videos and generate summaries",
+      "main": "server/index.js",
+      "scripts": {
+              "start": "node server/index.js",
+              "dev": "concurrently \"npm run server\" \"npm run client\"",
+              "server": "nodemon server/index.js",
+              "client": "cd client && npm start",
+              "build": "cd client && npm run build",
+              "postbuild": "npm run build"
+      },
+      "keywords": ["youtube", "transcription", "summarization", "ai"],
+      "author": "",
+      "license": "MIT",
+      "dependencies": {
+              "express": "^4.18.2",
+              "cors": "^2.8.5",
+              "dotenv": "^16.0.3",
+              "@anthropic-ai/sdk": "^0.9.1",
+              "youtube-transcript-api": "^1.0.6"
+      },
+      "devDependencies": {
+              "nodemon": "^3.0.1",
+              "concurrently": "^8.0.1"
+      },
+      "engines": {
+              "node": "18.x"
+      }
 }
