--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,19 @@
 {
-    "version": 2,
-    "builds": [
-          {
-                  "src": "server/index.js",
-                  "use": "@vercel/node"
-          },
-          {
-                  "src": "client/package.json",
-                  "use": "@vercel/static-build",
-                  "config": {
-                            "distDir": "client/build"
-                  }
-          }
-    ],
-    "routes": [
-          {
-                  "src": "/api/(.*)",
-                  "dest": "server/index.js"
-          },
-          {
-                  "src": "/(.*)",
-                  "dest": "client/build/$1"
-          }
-    ]
+      "version": 2,
+      "buildCommand": "npm run build --prefix client",
+      "installCommand": "npm install && npm install --prefix client",
+      "outputDirectory": "client/build",
+      "env": {
+              "NODE_ENV": "production"
+      },
+      "routes": [
+              {
+                        "src": "/api/(.*)",
+                        "dest": "server/index.js"
+              },
+              {
+                        "src": "/(.*)",
+                        "dest": "client/build/index.html"
+              }
+      ]
 }
