--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
                   "cors": "^2.8.5",
                   "dotenv": "^16.0.3",
                   "@anthropic-ai/sdk": "^0.9.1",
-                  "youtube-transcript": "^3.12.0"
-        },
+    "youtube-transcript": "^1.0.0"        },
         "devDependencies": {
                   "nodemon": "^3.0.1",
                   "concurrently": "^8.0.1"
