--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
                   "cors": "^2.8.5",
                   "dotenv": "^16.0.3",
                   "@anthropic-ai/sdk": "^0.9.1",
-    "youtube-transcript": "^1.0.0"        },
+    "youtube-transcript": "^1.0.0"        },,
+            "axios": "^1.6.0",
+            "xml2js": "^0.6.2"
 ,
         "devDependencies": {
                   "nodemon": "^3.0.1",
